# dash_dashkit

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  README.md  mise.toml  mkdocs.yml  package-lock.json  package.json  pyproject.toml  run.py  tailwind.config.js  test_component.py  test_dashkit_shadcn.py
.github/workflows/: docs.yml  release-please.yml  release.yml  smoke.yml
dash-attio-table/: MANIFEST.in  package-info.json  package-lock.json  package.json  setup.py  webpack.config.js
dash-attio-table/R/: attioTable.R
dash-attio-table/dash_attio_table/: AttioTable.py  __init__.py  _imports_.py  dash_attio_table.js  dash_attio_table.js.LICENSE.txt  proptypes.js
dash-attio-table/dash_attio_table.egg-info/: SOURCES.txt
dash-attio-table/man/: attioTable.Rd
dash-attio-table/src/jl/: attiotable.jl
dash-attio-table/src/ts/components/: AttioTable.tsx
demo/: callouts.py
docs/: index.md
docs/api/: setup.md
docs/api/components/: buttons.md  callouts.md  cards.md  charts.md  header.md  layout.md  markdown.md  sidebar.md  table.md
docs/guides/: quickstart.md
docs/internals/: architecture.md  development.md
docs/javascripts/: extra.js
docs/stylesheets/: extra.css
scripts/: bump_version.py
src/: input.css
src/assets/: input.css  style.css
src/dash_attio/: __init__.py  app.py
src/dash_attio/components/: __init__.py  buttons.py  header.py  layout.py  logo.py  navigation.py  sidebar.py  table.py
src/dash_attio/components/attio_table/: __init__.py  attio_table_modern.py
src/dash_attio_components/: __init__.py  header.py  layout.py  logo.py  markdown_report.py  navigation.py  sidebar.py  table.py  theme_manager.py
src/dash_attio_components/attio_table/: __init__.py  attio_table.py
src/dash_attio_demo/: __init__.py  app.py  sample_report.py
src/dash_attio_demo/pages/: __init__.py  companies.py  reports.py
src/dashkit/: __init__.py  breadcrumbs.py  buttons.py  card.py  layout.py  logo.py  markdown_report.py  navigation.py  sidebar.py  table.py  theme_manager.py
src/dashkit_demo/: app.py  demo_utils.py
src/dashkit_demo/pages/: __init__.py  analysis.py  charts.py  companies.py  contributions.py  duplex.py  pcr.py  reports.py  trending.py
src/dashkit_demo/pages/pcr/: pcr.py
src/dashkit_demo/pages/pcr/duplex/: __init__.py  analysis.py  trending.py
src/dashkit_kiboui/R/: contributionGraphCalendar.R
src/dashkit_kiboui/dashkit_kiboui/: ContributionGraph.py  ContributionGraphBlock.py  ContributionGraphCalendar.py  dashkit_kiboui.js  metadata.json
src/dashkit_kiboui/dashkit_kiboui.egg-info/: SOURCES.txt
src/dashkit_kiboui/man/: contributionGraphCalendar.Rd
src/dashkit_kiboui/src/jl/: contributiongraphcalendar.jl
src/dashkit_kiboui/src/ts/components/: ContributionGraphCalendar.tsx
src/dashkit_shadcn/src/ts/components/charts/: AreaChart.tsx  ChartLegend.tsx  ChartTooltip.tsx
src/dashkit_table/: NAMESPACE  package-info.json  package-lock.json  package.json  pyproject.toml  setup.py  webpack.config.js
src/dashkit_table/R/: attioTable.R
src/dashkit_table/dash_attio_table.egg-info/: PKG-INFO  top_level.txt
src/dashkit_table/dashkit_table/: AttioTable.py  DashkitTable.py  __init__.py  _imports_.py  dashkit_table.js  metadata.json  proptypes.js
src/dashkit_table/dashkit_table.egg-info/: SOURCES.txt
src/dashkit_table/man/: attioTable.Rd  dashkitTable.Rd
src/dashkit_table/src/dashkit_table/: CHANGELOG.md
src/dashkit_table/src/jl/: attiotable.jl  dashkittable.jl
src/dashkit_table/src/ts/components/: AttioTable.tsx  DashkitTable.tsx  index.ts
