[project]
name = "dash-attio"
version = "0.1.0"
description = "Attio-style components for Dash applications"
requires-python = ">=3.11"
dependencies = [
    "dash>=2.17.0",
    "dash-bootstrap-components>=1.5.0",
    "dash-handsontable>=0.1.0",
    "plotly>=5.17.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "basedpyright>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dash_attio"]

[tool.ruff.lint]
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.basedpyright]
include = ["src"]
exclude = ["**/__pycache__"]
reportMissingTypeStubs = false
reportUnknownParameterType = false
reportUnknownArgumentType = false

[dependency-groups]
dev = [
    "basedpyright>=1.31.0",
    "ruff>=0.12.7",
]
