[project]
name = "dashkit"
version = "0.1.0"
description = "Modern dashboard components for Dash applications"
requires-python = ">=3.11"
dependencies = [
    "dash[dev]>=2.17.0",
    "dash-bootstrap-components>=1.5.0",
    "plotly>=5.17.0",
    "dashkit-table",
]

[project.optional-dependencies]
dev = ["ruff>=0.1.0", "basedpyright>=1.10.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dashkit"]

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = ["src/dashkit_table/**"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.basedpyright]
include = ["src"]
exclude = ["**/__pycache__", "src/dashkit_table/**"]
reportMissingTypeStubs = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportMissingImports = false
reportAny = false
reportExplicitAny = false
reportUnusedParameter = false
reportMissingParameterType = false
reportArgumentType = false
reportReturnType = false
reportIncompatibleMethodOverride = false
reportImplicitOverride = false
reportUnannotatedClassAttribute = false
reportUnnecessaryIsInstance = false

[tool.uv.sources]
dashkit-table = { path = "src/dashkit_table" }

[dependency-groups]
dev = ["basedpyright>=1.31.0", "ruff>=0.12.7", "taskipy>=1.12.0"]

[tool.taskipy.tasks]
setup = "cd src/dashkit_table && npm install && npm run build; uv pip install -e . --force-reinstall"
build-table = "cd src/dashkit_table && npm run build"
install-table = "cd src/dashkit_table && uv pip install -e ."
lint = "ruff check src/ && ruff format src/"
typecheck = "basedpyright src/"
check = "task lint && task typecheck"
dev = "python src/dashkit_demo/app.py"
